--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 }
+
+.pokemon {
+  font-family: Arial;
+  margin: 15px;
+  background-color: white;
+  color: black;
+  padding: 5px;
+  box-shadow: 2px 2px 5px white;
+  border-style: solid;
+  border-radius: 10px;
+}
