--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,53 +1,191 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(204, 172, 28);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.upper-part {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-.pokemon {
-  font-family: Arial;
-  margin: 15px;
-  background-color: white;
-  color: black;
-  padding: 5px;
-  box-shadow: 2px 2px 5px white;
+.upper-id, .upper-name {
+  display: flex;
   border-style: solid;
-  border-radius: 10px;
+  border-width: 5px;
+  border-color: black;
+  background-color: rgb(163, 103, 19);
+  color: white;
+  height: 110px;
+  align-items: center;
+  justify-content: center;
+  font-size: 65px;
+  font-weight: bold;
+  text-shadow: 0px 1px 7px black;
+  border-radius: 20px;
+  padding-bottom: 5px;
+}
+
+.upper-id {
+  flex:1;
+  margin-right: -4px;
+}
+
+.upper-name {
+  flex: 4;
+}
+
+.middle-part {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  top: 120px;
+  right: 0;
+  left: 0;
+}
+
+.pokemon-characteristics-container {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  align-items: center;
+  left: 0;
+  height: 400px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
+  background-color: rgb(163, 103, 19);
+  border-radius: 20px;
+  flex: 1;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.pokemon-stats-container {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  align-items: center;
+  right: 0;
+  height: 400px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
+  background-color: rgb(163, 103, 19);
+  border-radius: 20px;
+  flex: 1;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.pokemon-image-container {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  
+  left: 0;
+  right: 0;
+}
+
+.pokemon-image {
+  margin-top: 10px;
+  height: 700px;
+}
+
+.category-container {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  margin-bottom: 10px;
+  margin-top: 10px
+}
+
+.category {
+  color: white;
+  font-size: 22px;
+  font-weight: bold;
+  text-shadow: 0 1px 7px black;
+  margin-left: 8px;
+}
+
+.category-objects{
+  color: white;
+  font-size: 20px;
+  text-shadow: 0 1px 7px black;
+  display: flex;
+  justify-content: right;
+  margin-right: 12px;
+}
+
+.category-katakana {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 0 1px 7px black;
+  display: flex;
+  justify-content: right;
+  margin-right: 12px;
+}
+
+.bottom-part {
+  display: flex;
+  position: fixed;
+  bottom: 5px;
+  height: 110px;
+  right: 0;
+  left: 0;
+}
+
+.previous-evolution, .next-evolution {
+  display: flex;
+  border-style: solid;
+  bottom: 0;
+  border-width: 5px;
+  border-color: black;
+  background-color: rgb(163, 103, 19);
+  height: 110px;
+  align-items: center;
+  border-radius: 20px;
+  flex: 1;
+}
+
+.previous-evolution {
+  margin-right: -2px;
+  display:flex;
+  justify-content: space-between;
+}
+
+.next-evolution {
+  margin-left: -2px;
+  display:flex;
+  justify-content: space-between;
+}
+
+.previous-evolution-text, 
+.next-evolution-text, 
+.previous-evolution-pokemon, 
+.next-evolution-pokemon {
+  color: white;
+  font-size: 24px;
+  text-shadow: 0 1px 7px black;
+  display: flex;  
+}
+
+.previous-evolution-text, .previous-evolution-pokemon {
+  justify-content: right;
+  margin-right: 30px;
+}
+
+.next-evolution-text, .next-evolution-pokemon {
+  justify-content: left;
+  margin-left: 30px;
+}
+
+.previous-evolution-pokemon, .next-evolution-pokemon {
+  font-weight: bold;
 }
