--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,30 @@ body {
   background-color: rgb(204, 172, 28);
 }
 
+.pokedex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 800px;
+}
+
+.loading {
+  display: flex;
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
+  background-color: rgb(163, 103, 19);
+  color: white;
+  height: 110px;
+  align-items: center;
+  justify-content: center;
+  font-size: 50px;
+  font-weight: bold;
+  text-shadow: 0px 1px 7px black;
+  border-radius: 20px;
+  padding: 10px 15px;
+}
+
 .upper-part {
   position: fixed;
   display: flex;
@@ -94,7 +118,7 @@ body {
 
 .pokemon-image {
   margin-top: 10px;
-  height: 700px;
+  height: 600px;
 }
 
 .category-container {
@@ -188,4 +212,20 @@ body {
 
 .previous-evolution-pokemon, .next-evolution-pokemon {
   font-weight: bold;
+}
+
+.previous-pokemon-image, .next-pokemon-image {
+  width: 200px;
+}
+
+.previous-pokemon-image-container, .next-pokemon-image-container {
+  margin-bottom: 90px;
+}
+
+.previous-pokemon-image-container {
+  margin-left: 30px;
+}
+
+.next-pokemon-image-container {
+  margin-right: 30px;
 }
