--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,15 +1,15 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(204, 172, 28);
-}
-
 .pokedex {
   display: flex;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
   justify-content: center;
-  align-items: center;
-  height: 800px;
+}
+
+.shiny-switch {
+  position: absolute;
+  top: 430px;
+  right: 15px;
 }
 
 .loading {
@@ -17,7 +17,7 @@ body {
   border-style: solid;
   border-width: 5px;
   border-color: black;
-  background-color: rgb(163, 103, 19);
+  background-color: white;
   color: white;
   height: 110px;
   align-items: center;
@@ -27,6 +27,7 @@ body {
   text-shadow: 0px 1px 7px black;
   border-radius: 20px;
   padding: 10px 15px;
+  margin: auto;
 }
 
 .upper-part {
@@ -96,7 +97,7 @@ body {
   flex-direction: column;
   align-items: center;
   right: 0;
-  height: 400px;
+  height: 250px;
   border-style: solid;
   border-width: 5px;
   border-color: black;
