--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,23 @@
+.pokedex {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .pokedexContainer {
   display: flex;
   width: 100%;
   height: 100vh;
   justify-content: center;
+  text-shadow: 0px 0.5px 2px black;
+  transition-property: opacity;
+  transition-duration: 1s;
+  transition-timing-function: ease-in-out;
+
+  @starting-style {
+    opacity: 0;
+  }
 }
 
 .shiny-switch {
@@ -11,23 +26,48 @@
   right: 15px;
 }
 
+.shiny-text {
+  position: absolute;
+  color: black;
+  bottom: 40px;
+  right: 10px;
+}
+
 .loading {
   display: flex;
-  border-style: solid;
-  border-width: 5px;
-  border-color: black;
-  background-color: white;
-  color: white;
   height: 110px;
   align-items: center;
   justify-content: center;
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px 7px black;
-  border-radius: 20px;
   padding: 10px 15px;
   margin: auto;
+  
+  transition-property: opacity;
+  transition-duration: 1s;
+  transition-timing-function: ease-in-out;
+
+  @starting-style {
+    opacity: 0;
+  }
 }
+
+/*
+.fade-in {
+	opacity: 0;
+  animation-name: fadein;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-delay: 200ms;
+}
+
+@keyframes fadein {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+*/
 
 .upper-part {
   position: fixed;
@@ -48,7 +88,6 @@
   justify-content: center;
   font-size: 65px;
   font-weight: bold;
-  text-shadow: 0px 1px 7px black;
   border-radius: 20px;
   padding-bottom: 5px;
 }
@@ -127,13 +166,11 @@
 .category {
   font-size: 22px;
   font-weight: bold;
-  text-shadow: 0 1px 7px black;
   margin-left: 8px;
 }
 
 .category-objects{
   font-size: 20px;
-  text-shadow: 0 1px 7px black;
   display: flex;
   justify-content: right;
   margin-right: 12px;
@@ -142,7 +179,6 @@
 .category-katakana {
   font-size: 24px;
   font-weight: bold;
-  text-shadow: 0 1px 7px black;
   display: flex;
   justify-content: right;
   margin-right: 12px;
@@ -186,7 +222,6 @@
 .previous-evolution-pokemon, 
 .next-evolution-pokemon {
   font-size: 24px;
-  text-shadow: 0 1px 7px black;
   display: flex;  
 }
 
