--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,55 @@
+.main-screen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("https://i.ytimg.com/vi/Q7A9eftuLTw/maxresdefault.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 100vh;  
+  transition-property: opacity;
+  transition-duration: 1s;
+  transition-timing-function: ease-in-out;
+
+  @starting-style {
+    opacity: 0;
+  }
+
+  color: white;
+  text-shadow: 0px 0.5px 2px black;
+}
+
+.main-screen > h1 {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.main-screen > p {
+  font-size: 25px;
+}
+
+.main-screen > div > button {
+  font-size: 25px;
+  font-weight: bold;
+  background-color: #FF0000;
+  color: white;
+  border-radius: 10px;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.main-screen > div > input {
+  width: 400px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 10px;
+  border: none;
+  padding-left: 10px;
+}
+
 .pokedex {
   display: flex;
   justify-content: center;
@@ -11,13 +63,6 @@
   height: 100vh;
   justify-content: center;
   text-shadow: 0px 0.5px 2px black;
-  transition-property: opacity;
-  transition-duration: 1s;
-  transition-timing-function: ease-in-out;
-
-  @starting-style {
-    opacity: 0;
-  }
 }
 
 .shiny-switch {
