--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,6 +78,24 @@
   right: 10px;
 }
 
+.home-button {
+  position: absolute;
+  top: 580px;
+  left: 5px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
+  height: 80px;
+  font-size: 50px;
+  font-weight: bold;
+  border-radius: 20px;
+  padding: 5px;
+}
+
+.home-button:hover {
+  cursor: pointer;
+}
+
 .loading {
   display: flex;
   height: 110px;
