--- a/client/src/styles/Container.css
+++ b/client/src/styles/Container.css
@@ -1,6 +1,6 @@
 .fire {
   background-color: orange;
-  color: white;
+  color: black;
 }
 
 .water {
@@ -85,5 +85,5 @@
 
 .fairy {
   background-color: pink;
-  color: white;
+  color: black;
 }
