--- a/client/src/styles/Slider.css
+++ b/client/src/styles/Slider.css
@@ -1,3 +1,17 @@
+.shiny-switch {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px;
+  text-shadow: 0px 0.5px 2px black;
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
+  border-radius: 20px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .switch {
   position: relative;
   display: inline-block;
