--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,6 +98,21 @@
   cursor: pointer;
 }
 
+.home-button-error {
+  position: absolute;
+  top: 50px;
+  align-items: center;
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
+  height: 60px;
+  font-size: 30px;
+  font-weight: bold;
+  border-radius: 20px;
+  padding: 5px;
+  cursor: pointer;
+}
+
 .pokedex-random-button {
   position: absolute;
   top: 460px;
